# QuickJS-IDE

./: .gitignore  Makefile  fetch_src.sh
qjs_CLion/: CMakeLists.txt  hello.js
qjs_CLion/src/: ecma-array.c  ecma-array.h  ecma-function.c  ecma-function.h  ecma-object.c  ecma-object.h  ecma-type-conversion.c  ecma-type-conversion.h  qjs-api.h  qjs-atom.c  qjs-atom.h  qjs-backtrace.c  qjs-backtrace.h  qjs-constants.h  qjs-error.c  qjs-error.h  qjs-internal.h  qjs-operation.h  qjs-runtime.h  qjs-string.c  qjs-string.h  qjs-type.c  qjs-vm.c  qjs-vm.h  qjs.c  quickjs.c  quickjs.h
qjs_Xcode/quickjs-2020-11-08/: Makefile  libregexp.c  qjs.c  quickjs.c  unicode_gen.c
qjs_Xcode/quickjs_test/: hello.js
qjs_Xcode/quickjs_test.xcodeproj/: project.pbxproj
qjs_Xcode/quickjs_test.xcodeproj/project.xcworkspace/xcuserdata/benpeng.jiang.xcuserdatad/: UserInterfaceState.xcuserstate
qjs_Xcode/quickjs_test.xcodeproj/xcshareddata/xcschemes/: quickjs_test.xcscheme
qjs_Xcode/quickjs_test.xcodeproj/xcuserdata/benpeng.jiang.xcuserdatad/xcschemes/: xcschememanagement.plist
